2013-03-04  Holger Seelig  <holger.seelig@yahoo.de>

	* index.wrl:
	* LocalFog.wrl: 

2013-03-03  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl: 

2013-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* info.wrl:
	* buero.wrl:
	* building.wrl: 

2013-03-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* LOD.wrl: 

2013-03-01  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* Library.mdproj:
	* Box.wrl:
	* PointLight.wrl:
	* WalkViewer.wrl:
	* index.wrl: 

2013-02-19  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl: 

2013-02-17  Holger Seelig  <holger.seelig@yahoo.de>

	* geist.wrl:
	* VisibilitySensor.wrl: 

2013-02-16  Holger Seelig  <holger.seelig@yahoo.de>

	* geist.wrl:
	* ProximitySensor.wrl: 

2013-02-14  Holger Seelig  <holger.seelig@yahoo.de>

	* MovieTexture.wrl: 

2013-02-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* MovieTexture.wrl:
	* film.wrl:
	* film4.wrl:
	* film5.wrl:
	* film6.wrl:
	* film1.wrl:
	* film2.wrl:
	* film3.wrl:
	* buttons.wrl: 

2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* CoordinateInterpolator.wrl: 

2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* forklift3.wrl: 

2013-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* forklift3.wrl:
	* index.wrl:
	* m.wrl:
	* c4.wrl:
	* a3.wrl:
	* m4.wrl:
	* c3.wrl:
	* c2.wrl:
	* a2.wrl:
	* c1.wrl:
	* m2.wrl:
	* m1.wrl:
	* m3.wrl:
	* m6.wrl:
	* a1.wrl:
	* m5.wrl:
	* ok.aiff:
	* hud.wrl:
	* top.png:
	* m3on.wrl:
	* film.wrl:
	* m6on.wrl:
	* m5on.wrl:
	* cube.wrl:
	* c3on.wrl:
	* c2on.wrl:
	* c1on.wrl:
	* m4on.wrl:
	* c4on.wrl:
	* m1on.wrl:
	* a2on.wrl:
	* a1on.wrl:
	* m2on.wrl:
	* top.html:
	* a3on.wrl:
	* vrml.html:
	* film6.mpv:
	* haus3.jpg:
	* haus1.jpg:
	* film6.wrl:
	* haus2.jpg:
	* film4.mpv:
	* film3.wrl:
	* film4.wrl:
	* film5.wrl:
	* film5.mpv:
	* film1.wrl:
	* film1.mpv:
	* film2.mpv:
	* film3.mpv:
	* film2.wrl:
	* filme.png:
	* scene.wrl: