@@ -1,3 +1,8 @@
+2013-03-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* ViewVolume.wrl: 
+
 2013-03-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* index.wrl:
